ingress/data-control-center.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koor-dashboard-demo
  namespace: koor-operator # namespace:cluster
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - demo-staging.koor.tech
      secretName: koor-dashboard-demo-secret-data
  rules:
    - host: demo-staging.koor.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-control-center
                port:
                  number: 8282
